# agent-harness

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: README.md  ROADMAP.md  VISION.md  org-chart.md  prd-agent-harness.md
docs/adr/: ADR-0001-rust-runtime.md  ADR-0002-export-schema-versioning.md  ADR-0002-session-tree-model.md  ADR-0003-channel-abstraction.md  ADR-0003-memory-store-and-recall.md  ADR-0004-tool-interface.md  ADR-0005-export-schema-versioning.md  ADR-0006-memory-store-and-recall.md  ADR-0006-qmd-recall-engine.md
docs/prd/: 2026-02-16-agent-harness.md  2026-02-17-agent-harness-v2.md  2026-02-17-superagents-v2.md
docs/research/: 2026-01-31-pi-minimal-agent-openclaw.md  2026-02-16-agentstack-audit.md  2026-02-16-crewai-audit.md  2026-02-16-framework-comparison.md  2026-02-16-goose-audit.md  2026-02-16-mastra-audit.md  2026-02-16-nanobot.md  2026-02-16-openhands.md  2026-02-16-pi-mom.md  2026-02-16-pydantic-ai.md  2026-02-17-spacebot-analysis.md  2026-02-20-cognee-alternatives.md  2026-02-20-cognee-analysis.md  2026-02-20-qmd-alternatives.md  2026-02-20-qmd-analysis.md
docs/reviews/: 2026-02-17-codex-prd-review.md
docs/schema/: CHANGELOG.md
scripts/: check-schema-changelog.sh
src/: lib.rs  main.rs
src/core/: mod.rs  session.rs
src/cortex/: mod.rs
src/memory/: mod.rs  record.rs  store.rs
src/messaging/: mod.rs
src/tools/: mod.rs
